--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -207,7 +207,7 @@ typedef struct pEvntrec
  * - msg[7] = 
  *
  *  When an application received this message, it should sets the window to the top
- *  by calling mt_wind_set( msg[3], #WF_TOP, 0, 0, 0, 0, aes_global);
+ *  by calling mt_wind_set() with #WF_TOP parameter.
  */
 #define WM_TOPPED 	 	21
 
@@ -261,17 +261,33 @@ typedef struct pEvntrec
  *            - #WA_RTPAGE ( Page Right )
  *            - #WA_LFLINE ( Column Left )
  *            - #WA_RTLINE ( Column Right )
- *            - #WA_WHEEL  ( ??? XaAES ??? TODO )
- * - msg[5] = 
- * - msg[6] = 
- * - msg[7] = 
+ * - msg[5] = either 'MW' (0x4d57) on the first wheel click
+ *            or 'Mw' (0x4d77) on subsequent wheel clicks.
+ * - msg[6] = 0
+ * - msg[7] = original wheel amount
+ *
+ *  msg[5] to msg[7] are only available since XaAES with mouse wheel support. These
+ *  fields are filled by the AES when the AES automatically transforms mouse wheel
+ *  event (that appears on a window with arrow widget) to arrow messages.
  *
  *  A row or column message is sent when a slider arrow is selected. A 'page'
  *  message is sent when a darkened area of the scroll bar is clicked. This usually
  *  indicates that the application should adjust the window's contents by a larger
  *  amount than with the row or column messages.
  *
- *  XaAES extension (mouse wheel) -- to be completed.
+ *  If the application manage itself wheel event on a particular window (see
+ *  mt_wind_set()  with #WF_WHEEL parameter), then on mouse wheel events, the window
+ *  receives the following message:
+ *
+ * - msg[0] = #WM_ARROWED
+ * - msg[1] = AES application ID of the sender
+ * - msg[2] = 0
+ * - msg[3] = handle of the window 
+ * - msg[4] = #WA_WHEEL
+ * - msg[5] = 0
+ * - msg[6] = wheel number
+ * - msg[7] = wheel amount
+ *
  */
 #define WM_ARROWED	 	24
 
