--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -785,8 +785,10 @@ typedef struct pEvntrec
 #define FERR_NOFILES 		18	/**< No More Files (GEMDOS error -49), see mt_form_error() */
 
 /* fsel_(ex)input return values */
-#define FSEL_CANCEL		 0	/**< TODO */
-#define FSEL_OK			 1	/**< TODO */
+#define FSEL_CANCEL		 0	/**< the fileselector has been closed by using the CANCEL
+                                  button, see mt_fsel_exinput() */
+#define FSEL_OK			 1	/**< the fileselector has been closed by using the OK
+                                  button, see mt_fsel_exinput()  */
 
 /* menu_attach modes */
 #define ME_INQUIRE		0	/**< TODO */
