--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -855,14 +855,29 @@ typedef struct _mn_set
 /* shel_help mode */
 #define SHP_HELP 0      /**< see mt_shel_help() */
 
-/** Struktur fr erweiterte Start-Daten (fr shel_write) */
+/** structure for extended modes of mt_shel_write() */
 typedef struct
 {
-	char *newcmd;		/**< TODO */
-	long psetlimit;		/**< TODO */
-	long prenice;		/**< TODO */
-	char *defdir;		/**< TODO */
-	char *env;			/**< TODO */
+	/** points to the filename formatted in the manner indicated
+	 *  above
+	 */
+	char *newcmd;
+	/** contains the maximum memory size available to the process
+	 *  only used if the extended mode #SW_PSETLIMIT is set
+	 */
+	long psetlimit;
+	/** contains the process priority of the process to launch
+	 *  only used if the extended mode #SW_PRENICE is set
+	 */
+	long prenice;
+	/** points to a character string containing the default directory
+	 *  for the application begin launched.
+	 *  only used if the extended mode #SW_DEFDIR is set
+	 */
+	char *defdir;
+	/** points to a valid environment string for the process
+	 */
+	char *env;
 } SHELW;
 
 /** Andere Definition dafr (aus MagiC-Doku) */
@@ -897,27 +912,39 @@ typedef  struct
 
 
 /* shel_write modes */
-#define SWM_LAUNCH			0	/**< TODO */
-#define SWM_LAUNCHNOW		1	/**< TODO */
-#define SWM_LAUNCHACC		3	/**< TODO */
-#define SWM_SHUTDOWN		4	/**< TODO */
-#define SWM_REZCHANGE		5	/**< TODO */
-#define SWM_BROADCAST		7	/**< TODO */
-#define SWM_ENVIRON			8	/**< TODO */
-#define SWM_NEWMSG			9	/**< TODO */
-#define SWM_AESMSG			10	/**< TODO */
+/** Launch a GEM or TOS application or GEM desk accessory 
+ *  depending on the extension of the file. See mt_shel_write()
+ */
+#define SWM_LAUNCH			0
+/** Launch a GEM or TOS application based on the value of \a wisgr
+ */
+#define SWM_LAUNCHNOW		1
+#define SWM_LAUNCHACC		3	/**< Launch a GEM desk accessory, see mt_shel_write() */
+#define SWM_SHUTDOWN		4	/**< Manipulate 'Shutdown' mode, see mt_shel_write() */
+#define SWM_REZCHANGE		5	/**< Change screen resolution, see mt_shel_write() */
+#define SWM_BROADCAST		7	/**< Broadcast an AES message to all processes, see mt_shel_write() */
+#define SWM_ENVIRON			8	/**< Manipulate the AES environment, see mt_shel_write() */
+/** Inform the AES of a new message the current application understands,
+ *  see mt_shel_write()
+ */
+#define SWM_NEWMSG			9	
+#define SWM_AESMSG			10	/**< Send a message to the AES, see mt_shel_write() */
 #define SWM_THRCREATE		20	/**< TODO */
 
 /* other names for shel_write modes */
-#define SHW_NOEXEC			SWM_LAUNCH		/**< TODO */
-#define SHW_EXEC			SWM_LAUNCHNOW	/**< TODO */
-#define SHW_EXEC_ACC		SWM_LAUNCHACC	/**< TODO */
-#define SHW_SHUTDOWN		SWM_SHUTDOWN	/**< TODO */
-#define SHW_RESCHNG			SWM_REZCHANGE	/**< TODO */
-#define SHW_BROADCAST		SWM_BROADCAST	/**< TODO */
-#define SHW_INFRECGN		SWM_NEWMSG		/**< TODO */
-#define SHW_AESSEND			SWM_AESMSG		/**< TODO */
-#define SHW_THR_CREATE		SWM_THRCREATE	/**< TODO */
+#define SHW_NOEXEC			SWM_LAUNCH		/**< alias */
+#define SHW_EXEC			SWM_LAUNCHNOW	/**< alias */
+#define SHW_EXEC_ACC		SWM_LAUNCHACC	/**< alias */
+#define SHW_SHUTDOWN		SWM_SHUTDOWN	/**< alias */
+#define SHW_RESCHNG			SWM_REZCHANGE	/**< alias */
+#define SHW_BROADCAST		SWM_BROADCAST	/**< alias */
+#define SHW_INFRECGN		SWM_NEWMSG		/**< alias */
+#define SHW_AESSEND			SWM_AESMSG		/**< alias */
+#define SHW_THR_CREATE		SWM_THRCREATE	/**< alias */
+
+/* shel_write, parameter wisgr */
+#define TOSAPP				0  /**< application launched as TOS application, see mt_shel_write() */
+#define GEMAPP				1  /**< application launched as GEM application, see mt_shel_write() */
 
 /* shel_write */
 #define SHW_IMMED			0	/* PC-GEM  2.x */	/**< TODO */
@@ -926,22 +953,22 @@ typedef  struct
 #define SHW_PARALLEL		100	/* MAG!X */			/**< TODO */
 #define SHW_SINGLE			101	/* MAG!X */			/**< TODO */
 	
-/* command line parser (shel_write: parameter "isover") */
-#define CL_NORMAL		0	/**< TODO */
-#define CL_PARSE		1	/**< TODO */
+/* command line parser (shel_write: parameter "wiscr") */
+#define CL_NORMAL		0	/**< command line passed normaly, see mt_shel_write() */
+#define CL_PARSE		1	/**< command line passed in ARGV environment string, see mt_shel_write() */
 
-/* shutdown action (shel_write: mode SWM_SHUTDOWN, parameter "isover") */
-#define SD_ABORT		0		/**< Abort shutdown mode */
-#define SD_PARTIAL		1		/**< Partial shutdown mode */
-#define SD_COMPLETE		2		/**< Complete shutdown mode */
+/* shutdown action (shel_write: mode SWM_SHUTDOWN, parameter "wiscr") */
+#define SD_ABORT		0		/**< Abort shutdown mode, see mt_shel_write() */
+#define SD_PARTIAL		1		/**< Partial shutdown mode, see mt_shel_write() */
+#define SD_COMPLETE		2		/**< Complete shutdown mode, see mt_shel_write() */
 
 /* shel_write: mode SWM_ENVIRON, parameter 'wisgr' */
-#define ENVIRON_SIZE	0	/**< TODO */
-#define ENVIRON_CHANGE	1	/**< TODO */
-#define ENVIRON_COPY	2	/**< TODO */
+#define ENVIRON_SIZE	0	/**< returns the current size of the environment string, see mt_shel_write() */
+#define ENVIRON_CHANGE	1	/**< modify an environment variable, see mt_shel_write() */
+#define ENVIRON_COPY	2	/**< copy the evironment string in a buffer, see mt_shel_write() */
 
 /* shel_write: mode SWM_NEWMSG, parameter 'wisgr' */
-#define NM_APTERM		0x0001	/**< TODO */
+#define NM_APTERM		0x0001	/**< the application understands #AP_TERM messages, see #SWM_NEWMSG */
 
 /* Werte fr Modus SWM_AESMSG (fr shel_write) */
 #define AP_AESTERM		52     /* Mode 10: N.AES komplett terminieren. */	/**< TODO */
@@ -953,10 +980,10 @@ typedef  struct
 #define SHW_XMDENV		2048	/**< TODO */
 
 /* shel_write flags */
-#define SW_PSETLIMIT	0x0100	/**< TODO */
-#define SW_PRENICE		0x0200	/**< TODO */
-#define SW_DEFDIR 		0x0400	/**< TODO */
-#define SW_ENVIRON		0x0800	/**< TODO */
+#define SW_PSETLIMIT	0x0100	/**< Initial Psetlimit() */
+#define SW_PRENICE		0x0200	/**< Initial Prenice() */
+#define SW_DEFDIR 		0x0400	/**< Default Directory */
+#define SW_ENVIRON		0x0800	/**< Environment */
 
 /* rsrc_gaddr structure types */
 #define R_TREE			0	/**< Object tree, see mt_rsrc_gaddr() */
